# MSc-Data-Science-AUEB

./: .gitignore  LICENSE  README.md
recommender-systems/two-tower-retrieval/: .gitignore  README.md  Recommender.ipynb  pyproject.toml  requirements.txt
recommender-systems/two-tower-retrieval/setup/: Makefile  requirements.txt  setup.sh
recommender-systems/two-tower-retrieval/utils/: config.py  data_load_preprocess.py  data_loader.py  libs.py  logger.py
