[project]
name = "assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.18,<3",
    "numpy>=2.0,<2.1",
    "pandas>=2.0,<3",
    "protobuf>=5.29,<7",
    "sentence-transformers==5.4.1",
    "torch==2.10.0",
]

[tool.uv.workspace]
members = [
    "setup",
]
